force-app/main/default/objects/Condition__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At Closing</fullName>
            </value>
            <value>
                <fullName>Prior to Closing</fullName>
            </value>
            <value>
                <fullName>Post Closing</fullName>
            </value>
            <value>
                <fullName>Pre-Funding</fullName>
            </value>
            <value>
                <fullName>Appraisal</fullName>
                <isActive>false</isActive>
                <label>Appraisal</label>
            </value>
            <value>
                <fullName>Approval Required</fullName>
                <isActive>false</isActive>
                <label>Approval Required</label>
            </value>
            <value>
                <fullName>Cross Default</fullName>
                <isActive>false</isActive>
                <label>Cross Default</label>
            </value>
            <value>
                <fullName>Government Program</fullName>
                <isActive>false</isActive>
                <label>Government Program</label>
            </value>
            <value>
                <fullName>Insurance</fullName>
                <isActive>false</isActive>
                <label>Insurance</label>
            </value>
            <value>
                <fullName>Master Covenant Agreement</fullName>
                <isActive>false</isActive>
                <label>Master Covenant Agreement</label>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
                <isActive>false</isActive>
                <label>Miscellaneous</label>
            </value>
            <value>
                <fullName>Notice of Change</fullName>
                <isActive>false</isActive>
                <label>Notice of Change</label>
            </value>
            <value>
                <fullName>Payoff</fullName>
                <isActive>false</isActive>
                <label>Payoff</label>
            </value>
            <value>
                <fullName>Security</fullName>
                <isActive>false</isActive>
                <label>Security</label>
            </value>
            <value>
                <fullName>Verification</fullName>
                <isActive>false</isActive>
                <label>Verification</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>