force-app/main/default/objects/Condition__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>A value for this field is required if a Condition Type of &quot;Other&quot; is selected</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>