force-app/main/default/objects/Condition__c/fields/Condition_Number__c.field-meta.xml
<CustomField>
    <fullName>Condition_Number__c</fullName>
    <label>Condition Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>