force-app/main/default/objects/Condition__c/fields/SecondaryAssignedTo__c.field-meta.xml
<CustomField>
    <fullName>SecondaryAssignedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Conditions1</relationshipName>
    <type>Lookup</type>
</CustomField>