force-app/main/default/objects/Condition__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appraisal Acknowledgment - Bank</fullName>
            </value>
            <value>
                <fullName>Appraisal Acknowledgment - Bank - CRE Non Owner Occupied</fullName>
            </value>
            <value>
                <fullName>Appraisal Acknowledgment - Client</fullName>
            </value>
            <value>
                <fullName>Beneficial Ownership/Customer Due Diligence</fullName>
            </value>
            <value>
                <fullName>Borrowing Entities are in Good Standing</fullName>
            </value>
            <value>
                <fullName>Certified Rent Roll/Lease Submitted</fullName>
            </value>
            <value>
                <fullName>Closing Loan Package Approved (Pre-Closing Review)</fullName>
            </value>
            <value>
                <fullName>Collateral Title Submitted</fullName>
            </value>
            <value>
                <fullName>Collection(s) Paid and Explanation Provided</fullName>
            </value>
            <value>
                <fullName>Debt Schedule Submitted</fullName>
            </value>
            <value>
                <fullName>HMDA Data Collected</fullName>
            </value>
            <value>
                <fullName>Judgment or Lien Paid and Explanation Provided</fullName>
            </value>
            <value>
                <fullName>Proof of Insurance (Equipment, Vehicle, etc.) Provided</fullName>
            </value>
            <value>
                <fullName>Proof of Sufficient Cash Down</fullName>
            </value>
            <value>
                <fullName>Satisfactory Appraisal and Review</fullName>
            </value>
            <value>
                <fullName>Satisfactory Environmental Report</fullName>
            </value>
            <value>
                <fullName>Satisfactory Flood Insurance Coverage</fullName>
            </value>
            <value>
                <fullName>Satisfactory Hazard Insurance</fullName>
            </value>
            <value>
                <fullName>Satisfactory Internal Evaluation and Review</fullName>
            </value>
            <value>
                <fullName>Satisfactory Title Commitment</fullName>
            </value>
            <value>
                <fullName>Property Tax (CRIM)</fullName>
            </value>
            <value>
                <fullName>Other Legal Documents</fullName>
            </value>
            <value>
                <fullName>Pledge (Leases, Accounts Receivables, Inventory, etc.)</fullName>
            </value>
            <value>
                <fullName>Key Man Insurance</fullName>
            </value>
            <value>
                <fullName>Open Nave Checking Account</fullName>
            </value>
            <value>
                <fullName>Open Nave Savings Account</fullName>
            </value>
            <value>
                <fullName>AOC Income Assignment</fullName>
                <isActive>false</isActive>
                <label>AOC Income Assignment</label>
            </value>
            <value>
                <fullName>AOC PCA Mortgage</fullName>
                <isActive>false</isActive>
                <label>AOC PCA Mortgage</label>
            </value>
            <value>
                <fullName>AgriBank Prior Approval</fullName>
                <isActive>false</isActive>
                <label>AgriBank Prior Approval</label>
            </value>
            <value>
                <fullName>Assignment of Life Insurance</fullName>
                <isActive>false</isActive>
                <label>Assignment of Life Insurance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>